# sctui

./: .gitignore  Cargo.toml  README.md
src/: appconfig.rs  main.rs
