[package]
name = "sctui"
version = "0.1.0"
edition = "2021"
authors = ["Sawa"]
license = "MIT"
keywords = ["soundcloud", "tui", "player"]

[dependencies]
config = "0.15.11"

crossterm = "0.28.1"
ratatui = "0.29.0"
ratatui-image = "5.0.0"

rsoundcloud = "0.2.3"
tokio = { version = "1", features = ["full"] }
